--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,6 +1,6 @@
 /* กำหนดรูปแบบของหน้า Login */
 .login-page {
-  background: linear-gradient(135deg, #00d2ff, #3a7bd5);
+  background: linear-gradient(135deg, #bc8f8f, #000000);
   height: 100vh;
   display: flex;
   justify-content: center;
@@ -33,8 +33,8 @@
 
 /* ปุ่ม login */
 .login-form-button {
-  background-color: #3a7bd5;
-  border-color: #3a7bd5;
+  background-color: #252525;
+  border-color: #3f3f3f;
   color: #fff;
   font-size: 16px;
   padding: 10px;
@@ -52,9 +52,104 @@
   font-weight: bold;
   text-decoration: none;
 }
+
+
+
+
+/* Layout Base */
 body {
-
-  margin: 0;
-
+    font-family: 'Arial', sans-serif;
+    margin: 0;
+    background-color: #f9f9f9;
 }
 
+.container {
+    padding: 20px;
+    display: flex;
+    justify-content: center;
+    align-items: flex-start;
+}
+
+.card-container {
+    background: #ffffff;
+    border-radius: 10px;
+    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+    padding: 20px;
+}
+
+.left-section {
+    flex: 3;
+    padding: 20px;
+}
+
+.right-section {
+    flex: 1;
+    padding: 20px;
+    position: sticky;
+    top: 20px;
+}
+
+/* Typography */
+h1, h2, h3 {
+    font-weight: bold;
+    color: #333333;
+}
+
+p {
+    color: #555555;
+    line-height: 1.6;
+}
+
+/* Cards */
+.ant-card {
+    border-radius: 10px;
+    transition: all 0.3s ease-in-out;
+}
+
+/* .ant-card:hover {
+    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
+    transform: translateY(-5px);
+} */
+
+/* Images */
+.ant-image {
+    border-radius: 10px;
+    overflow: hidden;
+    box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
+}
+
+/* Buttons */
+.ant-btn-primary {
+    background-color: #1e90ff;
+    border-color: #1e90ff;
+    border-radius: 5px;
+    font-weight: bold;
+    transition: all 0.3s;
+}
+
+.ant-btn-primary:hover {
+    background-color: #1c86ee;
+    border-color: #1c86ee;
+}
+
+/* Avatars */
+.ant-avatar {
+    border: 2px solid #ffffff;
+    transition: transform 0.3s;
+}
+
+/* .ant-avatar:hover {
+    transform: scale(1.1);
+} */
+
+/* Responsive Design */
+@media (max-width: 768px) {
+    .container {
+        flex-direction: column;
+    }
+
+    .right-section {
+        position: static;
+        margin-top: 20px;
+    }
+}
